[!] Fix main.js: wordWrapColumn:180  main.css: .editor-normal{clear:both;height:600px}

--- a/console/src/main/resources/static/css/main.css
+++ b/console/src/main/resources/static/css/main.css
@@ -220,7 +220,7 @@
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
- */.button-list{text-align:right}.button-list button{margin-left:1em;font-size:14px}.editor-full-screen{width:100%;height:100%;position:fixed;top:0;left:0;z-index:100}.editor-normal{clear:both;height:300px}
+ */.button-list{text-align:right}.button-list button{margin-left:1em;font-size:14px}.editor-full-screen{width:100%;height:100%;position:fixed;top:0;left:0;z-index:100}.editor-normal{clear:both;height:600px}
 
 /*!
  * Copyright 1999-2018 Alibaba Group Holding Ltd.
